--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
+    "nodemailer": "^6.7.3",
+    "postmark": "^3.0.1",
     "uniqid": "^5.4.0"
   }
 }
