--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
         "no-unused-vars": "off",
         "prefer-destructuring": "off",
         "no-underscore-dangle": "off",
-        "max-len": "off"
+        "max-len": "off",
+        "no-undef": "off"
     }
 }
