--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,5 @@
 FROM node:17-alpine
 
-RUN npm install -g nodemon
-
 WORKDIR /app
 
 COPY package.json .
@@ -12,4 +10,4 @@ COPY . .
 
 EXPOSE 5000
 
-CMD ["npm", "run", "dev"]
+CMD ["node", "index.js"]
